Parser/test_cases/good/dispatchimpliedarglist.cl
class Test {
  foo:Test;
  bar(x:Int,y:Int,z:Bar):Object{bar(x,y,z)};
};
